kubernetes/apps/plex/resources/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - plex.lester.network
      secretName: plex-tls
  rules:
  - host: plex.lester.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port: 
              name: http
